--- a/main_site/css/styles.css
+++ b/main_site/css/styles.css
@@ -6,16 +6,26 @@ body {
 	position: fixed;
 	height: 35px;
 	width: 100%;
-	background: #68554a;
+	background-image: linear-gradient(bottom, #BC85C7 0%, #2D1438 100%);
+	background-image: -o-linear-gradient(bottom, #BC85C7 0%, #2D1438 100%);
+	background-image: -moz-linear-gradient(bottom, #BC85C7 0%, #2D1438 100%);
+	background-image: -webkit-linear-gradient(bottom, #BC85C7 0%, #2D1438 100%);
+	background-image: -ms-linear-gradient(bottom, #BC85C7 0%, #2D1438 100%);
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0, #BC85C7),
+		color-stop(1, #2D1438)
+	);
 	z-index: 10;
-	box-shadow: 1px 0 1px black;
+	box-shadow: 0 2px 2px rgba(39, 0, 37, 0.6200);
 }
 
 .mainContainer {
 	position: relative;
-	top: 60px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto 0 auto;
+	top: 35px;
 	height: auto;
 	width: 850px;
 	border: 1px solid blue;
@@ -56,4 +66,8 @@ nav ul li {
 	color: white;
 	text-shadow: 2px 2px 2px black;
 	margin: 10px 0 0 0;
+}
+
+.logo span {
+	color: #ff8246;
 }
