fixed text indent, added filler text

--- a/main_site/css/styles.css
+++ b/main_site/css/styles.css
@@ -4,31 +4,33 @@ html {
 
 body {
 	font-family: 'Droid Sans', sans-serif;
-	font-size: 62.5%;
-	background: url(../images/bright_squares.png) repeat;
+	font-size: 0.625em;
+	background: url(../images/bright_squares.png) repeat left top;
 }
 
 .topBar {
 	position: fixed;
 	height: 35px;
 	width: 100%;
-	background-image: linear-gradient(bottom, rgba(83,70,94,0.95) 0%, rgba(193,167,217,0.95) 100%);
-	background-image: -o-linear-gradient(bottom, rgba(83,70,94,0.95) 0%, rgba(193,167,217,0.95) 100%);
-	background-image: -moz-linear-gradient(bottom, rgba(83,70,94,0.95) 0%, rgba(193,167,217,0.95) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgba(83,70,94,0.95) 0%, rgba(193,167,217,0.95) 100%);
-	background-image: -ms-linear-gradient(bottom, rgba(83,70,94,0.95) 0%, rgba(193,167,217,0.95) 100%);
+	background-image: linear-gradient(bottom, rgba(47,40,56,0.95) 0%, rgba(101,80,125,0.95) 100%);
+	background-image: -o-linear-gradient(bottom, rgba(47,40,56,0.95) 0%, rgba(101,80,125,0.95) 100%);
+	background-image: -moz-linear-gradient(bottom, rgba(47,40,56,0.95) 0%, rgba(101,80,125,0.95) 100%);
+	background-image: -webkit-linear-gradient(bottom, rgba(47,40,56,0.95) 0%, rgba(101,80,125,0.95) 100%);
+	background-image: -ms-linear-gradient(bottom, rgba(47,40,56,0.95) 0%, rgba(101,80,125,0.95) 100%);
+
 	background-image: -webkit-gradient(
 		linear,
 		left bottom,
 		left top,
-		color-stop(0, rgba(83,70,94,0.95)),
-		color-stop(1, rgba(193,167,217,0.95))
+		color-stop(0, rgba(47,40,56,0.95)),
+		color-stop(1, rgba(101,80,125,0.95))
 	);
 	z-index: 10;
+	border-bottom: 1px solid black;
 }
 
 .mainContainer {
-	padding: 60px 0 20px 0;
+	padding: 70px 0 20px 0;
 }
 
 .mainWidth {
@@ -43,18 +45,14 @@ body {
 	padding: 20px 0 20px 0;
 	width: 100%;
 	background: url(../images/tweed.png) repeat;
+	border-top: 2px solid black;
+	color: white;
+	text-shadow: 1px 1px 2px black;
 }
 
-.catWindow {
-	display: block;
-	height: 400px;
-	width: 400px;
-	background: url(../images/cat_stack.png) no-repeat left top;
-	text-indent: -9999px;
-}
-
-.catWindow:hover, .catWindow:focus {
-	background-position: 0 -400px;
+p {
+	font-size: 1.7em;
+	line-height: 1.3em;
 }
 
 .topBar nav {
@@ -70,13 +68,21 @@ body {
 }
 
 .topBar li {
-	display: inline;
+	display: inline-block;
 	padding-right: 20px;
 	text-shadow: 1px 1px 4px black;
 }
 
 .topBar li:last-child {
 	padding-right: 0;
+}
+
+.topBar li:hover {
+	-webkit-transform: scale(1.03);
+	-moz-transform: scale(1.1); 
+	-o-transform: scale(1.1); 
+	transform: scale(1.03);
+	text-shadow: 0 0 8px rgba(255, 108, 40, 0.4);
 }
 
 .logo {
@@ -88,6 +94,14 @@ body {
 	font-size: 1.5em;
 }
 
+.logo:hover {
+	-webkit-transform: scale(1.01);
+	-moz-transform: scale(1.01); 
+	-o-transform: scale(1.01); 
+	transform: scale(1.01);
+	text-shadow: 0 0 8px rgba(255, 108, 40, 0.4);
+}
+
 .topBar span {
 	color: rgb(255, 108, 40);
 }
@@ -97,10 +111,13 @@ body {
 	color: rgb(255, 108, 40);
 	text-shadow: 2px 2px 2px rgba(42, 34, 49, 0.9);
 	font-size: 8.5em;
+	margin: 0 0 20px 30px;
+	background-color: ;
 }
 
 .memberPhotos {
-	height: 600px;
+	height: 400px;
+	margin-top: 20px;
 }
 
 .polaroids {
@@ -109,12 +126,19 @@ body {
 	text-indent: -9999px;
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.9);
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.9);
-	box-shadow: 0 0 5px rgba(0,0,0,0.9);
+	box-shadow: 1px 1px 3px rgba(0,0,0,0.9);
 	position: absolute;
 	-webkit-transition: all 0.2s ease-in-out;
 	-moz-transition: all 0.2s ease-in-out;
 	-o-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
+}
+
+.polaroids:hover {
+	-webkit-transform: scale(1) rotate(0deg); 
+	-moz-transform: scale(1) rotate(0deg); 
+	-o-transform: scale(1) rotate(0deg); 
+	transform: scale(1) rotate(0deg);
 }
 
 .yashaPhoto {
@@ -135,11 +159,4 @@ body {
 	transform: scale(0.9) rotate(5deg);
 	top: 25px;
 	left: 280px;
-}
-
-.polaroids:hover {
-	-webkit-transform: scale(1) rotate(0deg); 
-	-moz-transform: scale(1) rotate(0deg); 
-	-o-transform: scale(1) rotate(0deg); 
-	transform: scale(1) rotate(0deg);
 }
