--- a/main_site/css/styles.css
+++ b/main_site/css/styles.css
@@ -117,9 +117,9 @@ p {
 
 .titleBG {
 	position: absolute;
-	top: 125px;
+	top: 140px;
 	width: 500px;
-	height: 35px;
+	height: 15px;
 	-webkit-border-radius: 15% 85% 85% 15% / 50% 50% 50% 50%;
 	-moz-border-radius: 15% 85% 85% 15% / 50% 50% 50% 50%;
 	border-radius: 15% 85% 85% 15% / 50% 50% 50% 50%;
@@ -142,10 +142,10 @@ p {
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.9);
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.9);
 	position: absolute;
-	-webkit-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in;
 	-moz-transition: all 0.2s ease-in-out;
 	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in;
 }
 
 .polaroids:hover {
